# jobMail

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run  secrets.env.example
docs/: DEPLOYMENT.md
project/: context.md  doa.md  project.md
project/scripts/: README.md
scripts/: run_checks.sh  security_scan.sh
src/: __init__.py  classifier.py  config.py  gmail_client.py  processor.py  storage.py
tests/: fetch_test_emails.py  gptoss_120b_analysis.md  test_auth.py  test_classification_corpus.py  test_classifier.py  test_concurrent_classification.py  test_gemini_real.py  test_gptoss_120b.py  test_gptoss_fixes.py  test_gptoss_raw_response.py  test_model_comparison.py  test_ollama_json_mode.py  test_processor.py  test_real_classification.py  test_small_model_categories.py  test_storage.py
tests/fixtures/emails/: email_001.json  email_002.json  email_003.json  email_004.json  email_005.json  email_006.json  email_007.json  email_008.json  email_009.json  email_010.json
